ingress-world.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - world.thenewcherry.com
    secretName: tls-secret
  rules:
  - host: world.thenewcherry.com
    http:
      paths:
      - backend:
          serviceName: azure-vote-front
          servicePort: 80
        path: /
